terraform-aws/vpc.tf
resource "aws_vpc" "mainVPC" {
  cidr_block = "10.0.0.0/16" #ip address range of this VPC

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${local.env}-mainVPC"
  }

}
